--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     left: 50%;
     transform: translateX(-50%);
     max-width: 90%;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.3); /* lighter */
     backdrop-filter: blur(10px);
     color: #fff;
     padding: 10px 20px;
@@ -111,7 +111,7 @@
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.3); /* lighter */
     backdrop-filter: blur(10px);
     padding: 15px 20px;
     border-radius: 15px;
@@ -129,9 +129,9 @@
   }
 
   @keyframes pulseWhite {
-    0%   { background: rgba(0,0,0,0.6); }
+    0%   { background: rgba(0,0,0,0.3); }
     50%  { background: rgba(255,255,255,0.9); } 
-    100% { background: rgba(0,0,0,0.6); }
+    100% { background: rgba(0,0,0,0.3); }
   }
 
   .pulse-white {
@@ -212,12 +212,12 @@
     </p>
     <p>
       If you would like to see my other work click 
-      <a href="https://linktr.ee/lexofdystopia" target="_blank" onclick="event.stopPropagation()" style="position: relative;">
+      <a href="#" style="color:#fff; text-decoration:underline; position: relative;">
         here
         <span class="tooltip">
           <div style="text-align: center;">
             <img src="https://i.imgur.com/eKxOrcZ.jpeg" width="250" style="border-radius:8px; display:block; margin:0 auto;"><br>
-            https://linktr.ee/lexofdystopia
+            <a href="https://linktr.ee/lexofdystopia" target="_blank" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a>
           </div>
         </span>
       </a>.
@@ -236,7 +236,6 @@
     </div>
   </div>
 
-  <!-- Smaller dismiss message below panel -->
   <p id="dismiss-message">Click Anywhere to Dismiss this Message</p>
 </div>
 
